--- a/spring-5/java-8/pom.xml
+++ b/spring-5/java-8/pom.xml
@@ -12,4 +12,11 @@
     <artifactId>java-8</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
