--- a/spring-5/drips-network-disk/pom.xml
+++ b/spring-5/drips-network-disk/pom.xml
@@ -63,6 +63,10 @@
             <artifactId>swagger-models</artifactId>
             <version>1.5.22</version>
         </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
