--- a/spring-5/drips-network-disk/src/main/resources/application.properties
+++ b/spring-5/drips-network-disk/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 server.port=9092
+spring.profiles.active=local
 #   Spring DataSource
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.datasource.url=jdbc:mysql://192.168.80.206:32201/disk?characterEncoding=UTF-8&useSSL=false&useUnicode=true&serverTimezone=GMT%2B8
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=123456
