--- a/spring-5/pom.xml
+++ b/spring-5/pom.xml
@@ -24,10 +24,16 @@
         <hibernate.validator.version>6.1.0.Final</hibernate.validator.version>
         <mysql-connector-version>5.1.46</mysql-connector-version>
         <swagger.version>2.9.2</swagger.version>
+        <commons-lang-version>2.4</commons-lang-version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>${commons-lang-version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
