删除target 增加新建目录接口

--- a/spring-5/drips-network-disk/src/main/resources/application.properties
+++ b/spring-5/drips-network-disk/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9092
-spring.profiles.active=local
+spring.profiles.active=test
 #   Spring DataSource
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
